--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 	"devDependencies": {
 		"@playwright/test": "^1.20.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-cloudflare": "1.0.0-next.32",
 		"@sveltejs/adapter-node": "next",
+		"@sveltejs/adapter-static": "1.0.0-next.42",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
