--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "logic-fun-4",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 3000",
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"optimize": "vite optimize",
@@ -20,6 +20,8 @@
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-static": "1.0.0-next.42",
 		"@sveltejs/kit": "next",
+		"@tauri-apps/api": "^1.2.0",
+		"@tauri-apps/cli": "^1.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
@@ -32,7 +34,7 @@
 		"svelte-preprocess": "^4.10.1",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2",
-		"vite": "^3.1.0"
+		"vite": "^3.2.0"
 	},
 	"type": "module"
 }
